set up react router routes, auth and app contexts, basic overarching layout

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+@layer base {
+  body {
+    @apply p-5;
+  }
+
+  h1 {
+    @apply text-3xl;
+  }
+
+  main {
+    @apply min-h-full;
+  }
+}
+
+@layer components {
+}
