updated sign up form with more inputs

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,10 @@ html {
   box-sizing: border-box;
 }
 
+label {
+  @apply font-semibold;
+}
+
 @layer base {
   h1 {
     @apply text-3xl font-bold tracking-wider;
