--- a/client/src/output.css
+++ b/client/src/output.css
@@ -1384,6 +1384,18 @@ main {
   outline-color: var(--fallback-bc,oklch(var(--bc)/0.2));
 }
 
+.input-error {
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-er,oklch(var(--er)/var(--tw-border-opacity)));
+}
+
+.input-error:focus,
+    .input-error:focus-within {
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-er,oklch(var(--er)/var(--tw-border-opacity)));
+  outline-color: var(--fallback-er,oklch(var(--er)/1));
+}
+
 .input-disabled,
   .input:disabled,
   .input[disabled] {
