--- a/client/src/output.css
+++ b/client/src/output.css
@@ -1697,6 +1697,16 @@ main {
   padding: 1.25rem;
 }
 
+.innner-app__nav .active {
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-in,oklch(var(--in)/var(--tw-bg-opacity)));
+  padding: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  border-bottom: 1rem solid inherit;
+  border-radius: 12px;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -1729,10 +1739,6 @@ main {
   display: grid;
 }
 
-.h-60 {
-  height: 15rem;
-}
-
 .w-14 {
   width: 3.5rem;
 }
@@ -1741,8 +1747,28 @@ main {
   width: 75%;
 }
 
-.w-40 {
-  width: 10rem;
+.w-64 {
+  width: 16rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .max-w-xs {
@@ -1757,10 +1783,6 @@ main {
   flex: none;
 }
 
-.grow {
-  flex-grow: 1;
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1769,12 +1791,16 @@ main {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.flex-col {
-  flex-direction: column;
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.content-between {
-  align-content: space-between;
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -1783,10 +1809,6 @@ main {
 
 .justify-center {
   justify-content: center;
-}
-
-.justify-between {
-  justify-content: space-between;
 }
 
 .justify-around {
@@ -1801,6 +1823,10 @@ main {
   gap: 0.5rem;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -1813,8 +1839,12 @@ main {
   gap: 1.25rem;
 }
 
-.gap-20 {
-  gap: 5rem;
+.justify-self-start {
+  justify-self: start;
+}
+
+.justify-self-end {
+  justify-self: end;
 }
 
 .rounded-lg {
@@ -1857,6 +1887,10 @@ main {
   text-align: justify;
 }
 
+.align-middle {
+  vertical-align: middle;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1887,11 +1921,6 @@ main {
   line-height: 1.75rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1908,6 +1937,10 @@ main {
   font-weight: 600;
 }
 
+.font-light {
+  font-weight: 300;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
@@ -1922,6 +1955,10 @@ main {
 
 .tracking-wider {
   letter-spacing: 0.05em;
+}
+
+.tracking-widest {
+  letter-spacing: 0.1em;
 }
 
 .text-base-content {
