--- a/client/src/output.css
+++ b/client/src/output.css
@@ -1719,6 +1719,10 @@ main {
   margin-bottom: 1.25rem;
 }
 
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
 .ml-5 {
   margin-left: 1.25rem;
 }
@@ -1729,10 +1733,6 @@ main {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
 }
 
 .flex {
@@ -1753,6 +1753,10 @@ main {
 
 .w-3\/4 {
   width: 75%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .max-w-xs {
@@ -1813,10 +1817,6 @@ main {
 
 .gap-5 {
   gap: 1.25rem;
-}
-
-.justify-self-end {
-  justify-self: end;
 }
 
 .justify-self-center {
