adminView creates new family in families table

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,10 @@ label {
     @apply text-3xl font-bold tracking-wider;
   }
 
+  h2 {
+    @apply text-2xl font-semibold tracking-wide;
+  }
+
   main {
     min-height: 87vh;
   }
