--- a/client/src/output.css
+++ b/client/src/output.css
@@ -711,6 +711,13 @@ h1 {
   letter-spacing: 0.05em;
 }
 
+h2 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+  letter-spacing: 0.025em;
+}
+
 main {
   min-height: 87vh;
 }
@@ -1735,6 +1742,10 @@ main {
   margin-top: 1.25rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -1755,8 +1766,8 @@ main {
   width: 75%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
+.w-44 {
+  width: 11rem;
 }
 
 .max-w-xs {
