--- a/client/src/output.css
+++ b/client/src/output.css
@@ -1854,6 +1854,22 @@ main {
   width: 11rem;
 }
 
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
@@ -1876,6 +1892,10 @@ main {
 
 .flex-col {
   flex-direction: column;
+}
+
+.content-center {
+  align-content: center;
 }
 
 .items-center {
@@ -1912,6 +1932,10 @@ main {
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.self-center {
+  align-self: center;
 }
 
 .justify-self-center {
