updated logic in fetch children to rely upon different data point to make children visible to non-admin user guardians

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -2026,6 +2026,10 @@ main {
   margin-left: 2.5rem;
 }
 
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
 .ml-5 {
   margin-left: 1.25rem;
 }
@@ -2254,10 +2258,6 @@ main {
 
 .font-bold {
   font-weight: 700;
-}
-
-.font-extralight {
-  font-weight: 200;
 }
 
 .font-light {
