--- a/client/src/output.css
+++ b/client/src/output.css
@@ -2110,6 +2110,10 @@ main {
   flex-shrink: 0;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
