added filtering logic to healthcare professionals to separate by type

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -2206,6 +2206,14 @@ main {
   margin-right: auto;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
 .flex {
   display: flex;
 }
